# ViperOpenGLengine

./: CMakeLists.txt  externals.cpp  externals.h  main.cpp
mesh/: teapot.txt
scripts/GLMVecToString/: GLMVecToString.h
scripts/ScreenSizeMode/: screenSizeMode.cpp  screenSizeMode.h
scripts/appTime/: appTime.cpp  appTime.h
scripts/camera/: camera.cpp  camera.h
scripts/configs/: configs.h
scripts/getNull/: getNull.h
scripts/light/phong/: PhongEngine.cpp  PhongEngine.h
scripts/noise/: VPEnoise.cpp  VPEnoise.h
scripts/utils/: utils.cpp  utils.h
scripts/vec/: VPEvec.h
shaders/: frag.glsl  vert.glsl
shaders/HUD/: HUDfrag.glsl  HUDvert.glsl
shaders/InstancedObjShader/: InstancedFrag.glsl  InstancedVert.glsl
shaders/phong/staticPhongModel/: phong_frag.glsl  phong_vert.glsl
shaders/shadows/: ShadowFrag.glsl  ShadowVert.glsl
shaders/shadowsbeta/: shadowFrag.glsl  shadowVert.glsl
shaders/text/: textFrag.glsl  textVert.glsl
